--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: python
 cache: pip
+python: '3.6'
 
 before_install: pip install --upgrade pip
 install: pip install tox codecov
@@ -15,8 +16,8 @@ jobs:
       env: TOXENV=py36-cover
     - python: '3.7'
       env: TOXENV=py37-cover
-    - python: '3.7'
-      env: TOXENV=lint
+
+    - env: TOXENV=lint
 
     - stage: release
       if: tag IS present
