--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ jobs:
       env: TOXENV=py36-cover
     - python: '3.7'
       env: TOXENV=py37-cover
+      sudo: true
+      dist: xenial
 
     - env: TOXENV=lint
 
