Switch to flake8-import-order

--- a/tox.ini
+++ b/tox.ini
@@ -17,14 +17,10 @@ extras =
     lint
 commands =
     flake8 .
-    isort --check
 
 [flake8]
 # Default excluded files as of flake8 3.5.0 are:
 # .svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,*.egg
 # Ditch some unused paths for brevity & add packaging directories (build,dist)
 exclude = .git,__pycache__,.tox,*.egg,build,dist
-
-[isort]
-skip = .tox
-multi_line_output = 4
+application-import-names = vault_pact
